--- a/index.css
+++ b/index.css
@@ -19,31 +19,34 @@ h1{
     height: 300px; */
     border: 1px solid black;
     background-color: darkgray;
+    font-size: 35px;
 }
 
 .calcName{
-    width: 222px;
+    width: 420px;
     text-align: center;
     background-color: darkolivegreen;
-    height: 40px;
+    height: 80px;
 }
 
 .display{
-    width: 222px;
+    width: 420px;
     text-align: right;
-    height: 40px;
+    height: 80px;
+    font-size: 35px;
 }
 
 button{
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     margin: 2px;
+    font-size: 35px;
 }
 
 .theNumbers{
     display: flex;
-    width: 134px;
+    width: 254px;
     flex-wrap: wrap;
 }
 
@@ -62,13 +65,20 @@ button{
 }
 
 .equal{
-    height: 84px;
+    height: 168px;
+    background-color: indianred;
 }
 
 .zero{
-    width: 84px;
+    width: 164px;
 }
 
 .clear, .back{
     background-color: red;
+    font-size: 30px;
+}
+
+.operators{
+    background-color: indianred;
+    font-size: 35px;
 }
