--- a/index.css
+++ b/index.css
@@ -15,8 +15,6 @@ h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /*width: 250px;
-    height: 300px; */
     border: 1px solid black;
     background-color: darkgray;
     font-size: 35px;
@@ -25,8 +23,13 @@ h1{
 .calcName{
     width: 420px;
     text-align: center;
-    background-color: darkolivegreen;
+    background-color: darkslategray;
+    color: white;
     height: 80px;
+    font-style: oblique;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .display{
